--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, table {
-  font-family: Raleway, sans-serif;
+  font-family: sans-serif;
   margin-bottom: 20px;
   font-size: 18px;
 }
@@ -277,16 +277,23 @@ textarea {
 }
 
 .footer {
-  text-align: center;
+  text-align: left;
   background: rgb(173, 10, 15);
   color: #FFFFE8;
   font-size: 16px;
-  padding: 20px;
+  padding: 40px 20px;
   min-height: 20vh;
+  display: flex;
+  justify-content: space-around;
 }
 
-.footer p {
-  margin: 0;
+.footer section {
+  flex-basis: 45%;
+}
+
+.google-map {
+  width: 100%;
+  height: 400px;
 }
 
 .sans-serif {
@@ -388,5 +395,11 @@ textarea {
     -webkit-transform: scale(0.77);
     transform-origin: 0 0 0;
     -webkit-transform-origin: 0 0 0;
+  }
+  .footer {
+    flex-wrap: wrap;
+  }
+  .footer section {
+    flex-basis: 100%;
   }
 }
